--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "semantic-release": "semantic-release"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^4.1.19",
+    "semantic-release": "^15.13.24",
     "styled-components": "^4.3.2"
   }
 }
