--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:types": "tsc --declaration --outDir types --emitDeclarationOnly",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "yarn lint:js",
