--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nebula-frontend-template",
+  "name": "@lodgify/nebula-frontend-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
