feat: Generating package

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
+
       - persist_to_workspace:
           root: .
           paths:
@@ -65,6 +66,9 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
+      - run:
+          name: Generate package
+          command: yarn generate
       - run:
           name: Deploy
           command: yarn semantic-release
