--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@semantic-release/npm": "^5.1.15",
     "@types/styled-components": "^4.1.19",
     "jest-junit": "^8.0.0",
     "prettier": "^1.18.2",
