--- a/package.json
+++ b/package.json
@@ -37,11 +37,10 @@
     ]
   },
   "devDependencies": {
-    "@semantic-release/npm": "^5.1.15",
     "@types/styled-components": "^4.1.19",
     "jest-junit": "^8.0.0",
     "prettier": "^1.18.2",
-    "semantic-release": "^15.13.24",
+    "semantic-release": "^16.0.0-beta.24",
     "styled-components": "^4.3.2",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
