--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   nebula-executor:
     docker:
-      - image: circleci/node:10-browsers
+      - image: circleci/node:10
     working_directory: ~/repo
 
 jobs:
@@ -27,9 +27,9 @@ jobs:
             - ~/.cache/yarn
 
       - persist_to_workspace:
-          root: .
+          root: ~/
           paths:
-            - node_modules
+            - repo
 
   test:
     executor: nebula-executor
