--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^1.18.2",
     "semantic-release": "^16.0.0-beta.24",
     "styled-components": "^4.3.2",
+    "@lodgify/quarks": "^37.6.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-immutable": "^6.0.1",
