--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lodgify/nebula-frontend-template",
   "version": "0.1.0",
   "license": "UNLICENSED",
-  "main": "build/static/js/main.*.js",
+  "main": "build/main.js",
   "types": "types/src/index.d.ts",
   "repository": {
     "type": "git",
