fix: Cleaning stuff.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,7 @@ jobs:
           at: ~/
       - run:
           name: Build
-          command: |
-            yarn build
+          command: yarn build
       - persist_to_workspace:
           root: .
           paths:
