--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@lodgify/nebula-frontend-template",
   "version": "0.1.0",
-  "license": "UNLICENSED",
   "main": "build/main.js",
   "types": "types/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/lodgify/nebula-frontend-template"
+  },
+  "scripts": {
+    "build:types": "tsc --declaration --outDir types --emitDeclarationOnly",
+    "build": "webpack --config ./config/webpack.config.js --mode production",
+    "dev": "webpack-dev-server --config ./config/webpack.config.dev.js --mode development --open --hot",
+    "lint:js": "tslint -p . -c tslint.json --format codeFrame",
+    "lint": "yarn lint:js",
+    "semantic-release": "semantic-release",
+    "test": "jest --env=jsdom --silent"
   },
   "dependencies": {
     "@babel/core": "7.5.5",
@@ -69,15 +77,6 @@
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1"
-  },
-  "scripts": {
-    "build:types": "tsc --declaration --outDir types --emitDeclarationOnly",
-    "build": "webpack --config ./config/webpack.config.js",
-    "dev": "webpack-dev-server --config ./config/webpack.config.dev.js --mode development --open --hot",
-    "lint:js": "tslint -p . -c tslint.json --format codeFrame",
-    "lint": "yarn lint:js",
-    "semantic-release": "semantic-release",
-    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
