--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "jest-junit": "^8.0.0",
     "prettier": "^1.18.2",
-    "semantic-release": "^16.0.0-beta.24",
+    "semantic-release": "^15.13.24",
     "source-map-loader": "^0.2.4",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
