--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "test": "jest --env=jsdom --silent"
   },
   "dependencies": {
-    "@lodgify/quarks": "^37.6.0",
-    "@types/styled-components": "^4.1.19",
-    "styled-components": "^4.3.2",
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react": "16.9.2",
+    "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-eslint": "10.0.2",
@@ -36,25 +35,25 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^6.1.0",
+    "dotenv": "6.2.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react": "7.14.3",
+    "eslint": "^6.1.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "24.8.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
+    "jest": "24.8.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -63,22 +62,24 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
-    "resolve": "1.12.0",
+    "react-router-dom": "^5.0.1",
+    "react": "^16.9.0",
     "resolve-url-loader": "3.1.0",
+    "resolve": "1.12.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-components": "^4.3.2",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
     "typescript": "3.6.3",
     "url-loader": "2.1.0",
-    "webpack": "4.39.1",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
+    "webpack": "4.39.1",
     "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
@@ -162,5 +163,6 @@
     "presets": [
       "react-app"
     ]
-  }
+  },
+  "peerDependencies": {}
 }
