--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lodgify/nebula-frontend-template",
-  "version": "0.1.12",
+  "version": "0.1.14",
   "main": "build/main.js",
   "types": "types/src/index.d.ts",
   "repository": {
@@ -21,9 +21,9 @@
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^4.3.5",
-    "@types/react": "16.9.2",
     "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -35,25 +35,25 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
-    "dotenv-expand": "4.2.0",
     "dotenv": "6.2.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-react": "7.14.3",
-    "eslint": "^6.1.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
+    "jest": "24.8.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
-    "jest": "24.8.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -64,11 +64,12 @@
     "postcss-safe-parser": "4.0.1",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react": "^16.9.0",
-    "resolve-url-loader": "3.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "resolve": "1.12.0",
+    "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
@@ -77,9 +78,9 @@
     "ts-pnp": "1.1.2",
     "typescript": "3.6.3",
     "url-loader": "2.1.0",
+    "webpack": "4.39.1",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "webpack": "4.39.1",
     "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
@@ -98,6 +99,9 @@
     ]
   },
   "devDependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
     "awesome-typescript-loader": "^5.2.1",
     "jest-junit": "^8.0.0",
     "prettier": "^1.18.2",
@@ -164,5 +168,8 @@
       "react-app"
     ]
   },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  }
 }
