--- a/package.json
+++ b/package.json
@@ -99,12 +99,13 @@
     ]
   },
   "devDependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "jest-junit": "^8.0.0",
     "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "semantic-release": "^16.0.0-beta.24",
     "source-map-loader": "^0.2.4",
     "tslint": "^5.20.0",
