--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.1.0",
     "@lodgify/quarks": "^37.8.0",
+    "@percy/cypress": "^2.1.1",
     "@types/enzyme": "^3.10.3",
     "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
