--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           at: ~/
       - run:
           name: Test
-          command: yarn test --maxWorkers 2 --ci
+          command: yarn test --maxWorkers 2 --ci --testResultsProcessor="jest-junit"
           environment:
             JEST_JUNIT_OUTPUT: 'test-results/Jest/js-test-results.xml'
       - store_test_results:
