--- a/package.json
+++ b/package.json
@@ -172,6 +172,10 @@
       "jsx",
       "node"
     ],
+    "reporters": [
+      "default",
+      "jest-junit"
+    ],
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
