--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "tslint-immutable": "^6.0.1",
     "tslint-plugin-prettier": "^2.0.1",
     "webpack-bundle-analyzer": "^3.5.0",
-    "webpack-cli": "3.3.0",
+    "webpack-cli": "^3.3.9",
     "webpack-node-externals": "^1.7.2"
   },
   "jest": {
