--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
           name: Install dependencies
           command: |
             echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
+            rm -rf node_modules
+            yarn cache clean
             yarn install --frozen-lockfile
       - save_cache:
           name: Save Yarn cache
