--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,26 @@ jobs:
             JEST_JUNIT_OUTPUT: 'test-results/Jest/js-test-results.xml'
       - store_test_results:
           path: test-results
-  visual:
+ 
+  visual-build:
+    executor: nebula-executor
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Build the app
+          command: yarn build
+          environment:
+            NODE_ENV: development
+            LOCAL_DOMAIN: localhost
+            LOCAL_PORT: 9000
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - build
+
+ visual:
     executor: cypress
     steps:
       - attach_workspace:
@@ -63,23 +82,6 @@ jobs:
           name: Cypress & Percy
           command: yarn percy exec -- yarn visual run --record false --key ${CYPRESS_TOKEN} --config video=true
 
-  visual-build:
-    executor: nebula-executor
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Build the app
-          command: yarn run build
-          environment:
-            NODE_ENV: development
-            LOCAL_DOMAIN: localhost
-            LOCAL_PORT: 9000
-
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - repo/build
 
   build:
     executor: nebula-executor
@@ -88,7 +90,7 @@ jobs:
           at: ~/
       - run:
           name: Build
-          command: yarn run build
+          command: yarn build
       - persist_to_workspace:
           root: .
           paths:
