--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
           name: Test
           command: yarn test --maxWorkers 2 --ci --testResultsProcessor="jest-junit"
           environment:
-            JEST_JUNIT_OUTPUT: 'test-results/Jest/js-test-results.xml'
+            JEST_JUNIT_OUTPUT: "test-results/Jest/js-test-results.xml"
       - store_test_results:
           path: test-results
- 
+
   visual-build:
     executor: nebula-executor
     steps:
@@ -63,14 +63,14 @@ jobs:
           environment:
             NODE_ENV: development
             LOCAL_DOMAIN: localhost
-            LOCAL_PORT: 9000
+            LOCAL_PORT: "9000"
 
       - persist_to_workspace:
           root: .
           paths:
             - build
 
- visual:
+  visual:
     executor: cypress
     steps:
       - attach_workspace:
@@ -81,7 +81,6 @@ jobs:
       - run:
           name: Cypress & Percy
           command: yarn percy exec -- yarn visual run --record false --key ${CYPRESS_TOKEN} --config video=true
-
 
   build:
     executor: nebula-executor
