--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build:types": "tsc --declaration --outDir types --emitDeclarationOnly",
-    "build": "webpack --config ./config/webpack/webpack.config.js --mode production",
+    "build": "rm -r build || true && webpack --config ./config/webpack/webpack.config.js --mode production",
     "dev": "webpack-dev-server --config ./config/webpack/webpack.config.dev.js --mode development --open --hot",
     "lint:js": "tslint -p . -c tslint.json --format codeFrame",
     "lint": "yarn lint:js",
@@ -124,7 +124,7 @@
     "tslint-immutable": "^6.0.1",
     "tslint-plugin-prettier": "^2.0.1",
     "webpack-bundle-analyzer": "^3.5.0",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "3.3.0",
     "webpack-node-externals": "^1.7.2"
   },
   "jest": {
@@ -171,6 +171,10 @@
       "web.jsx",
       "jsx",
       "node"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
     ],
     "watchPlugins": [
       "jest-watch-typeahead/filename",
