--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,15 +18,19 @@ jobs:
       - restore_cache:
           name: Restore cache
           keys:
-            - ${CACHE_VERSION}
+            - yarn-packages-${CACHE_VERSION}-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - yarn-packages-${CACHE_VERSION}-{{ .Branch }}-
+            - yarn-packages-v1-
+
       - run:
           name: Install dependencies
           command: |
             echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
             yarn install --frozen-lockfile
+
       - save_cache:
           name: Save Yarn cache
-          key: ${CACHE_VERSION}
+          key: yarn-packages-${CACHE_VERSION}-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
             - ~/.cache/Cypress
