--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,10 @@ jobs:
       - run:
           name: Test
           command: yarn test --maxWorkers 2 --ci --testResultsProcessor="jest-junit"
+          environment:
+            JEST_JUNIT_OUTPUT: "test-results/Jest/js-test-results.xml"
+      - store_test_results:
+          path: test-results
 
   visual-build:
     executor: nebula-executor
