--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "**/.svn": true,
     "**/CVS": true,
     "build": true,
+    "dist": true,
     "junit.xml": true,
     "node_modules": true,
     "public": true,
