--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: yarn visual:build
 
       - persist_to_workspace:
-          root: .
+          root: ~/
           paths:
             - dist
 
