--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
           command: cd dist && ls
 
       - persist_to_workspace:
-          root: .
+          root: ./
           paths:
             - dist
 
