--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ jobs:
           name: Verify if there is a built version of the module
           command: ls && cd dist && ls -1 | wc -l | (read count; if [ $count > 1 ]; then echo "Build verified." && exit 0; else echo "There is no build available." && exit 1; fi)
       - run:
-          name: Cypress
+          name: Cypress execution
           command: yarn visual run --record false --key ${CYPRESS_TOKEN} --config video=true
 
   build:
@@ -97,6 +97,11 @@ jobs:
       - run:
           name: Build
           command: yarn build
+
+      - run:
+          name: Checking built files
+          command: cd build && ls
+
       - persist_to_workspace:
           root: ~/
           paths:
@@ -137,3 +142,4 @@ workflows:
             - dependencies
             - test
             - build
+            - visual-build
