fix: Fixing job.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,14 @@ executors:
     working_directory: ~/repo
 
 jobs:
+  lint:
+    executor: nebula-executor
+    steps:
+      - checkout
+      - run:
+          name: Lint
+          command: yarn lint
+
   dependencies:
     executor: nebula-executor
     steps:
@@ -42,15 +50,6 @@ jobs:
             - .ssh/known_hosts
             - .npmrc
             - .cache/Cypress
-
-  lint:
-    executor: nebula-executor
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Lint
-          command: yarn lint
 
   test:
     executor: nebula-executor
